tests/type_safety/pattern_non_exhaustive.stderr
warning: unused import: `StreamingStatus`
 --> tests/type_safety/pattern_non_exhaustive.rs:9:39
  |
9 | use openrouter_api::types::{ChatRole, StreamingStatus};
  |                                       ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/type_safety/pattern_non_exhaustive.rs:14:11
   |
14 |     match role {
   |           ^^^^ pattern `_` not covered
   |
note: `ChatRole` defined here
  --> src/types/chat.rs
   |
   | pub enum ChatRole {
   | ^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ChatRole`
   = note: `ChatRole` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
16 ~         ChatRole::Assistant => "assistant response",
17 ~         _ => todo!(),
   |
